Bug 507844 - Image on the preview panel increases brightness instead of switching to the next one when switching files
Summary: Image on the preview panel increases brightness instead of switching to the n...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (other bugs)
Version First Reported In: 25.04.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Pan Zhang
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2025-08-04 08:41 UTC by indx
Modified: 2025-09-28 10:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Bug (3.04 MB, video/mp4)
2025-08-04 08:41 UTC, indx
Details

Note You need to log in before you can comment on or make changes to this bug.
Description indx 2025-08-04 08:41:23 UTC
Created attachment 183774 [details]
Bug

SUMMARY
When using arrow keys to switch files, the image on the preview panel increases brightness instead of switching to the next one. It's only reproducible when doing it fast

STEPS TO REPRODUCE
1. Open dolphin
2. Enable the side panel
3. Enable file preview
4. Change files with arrow keys fastly

OBSERVED RESULT
Image increases brightness until it's fully white

EXPECTED RESULT
Images just switch

SOFTWARE/OS VERSIONS
Linux: Arch Linux 
KDE Plasma Version:  6.4.3
KDE Frameworks Version: 6.16.0
Qt Version: 6.9.1

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2025-09-17 09:26:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1057
Comment 2 Pan Zhang 2025-09-17 09:27:42 UTC
I have reproduced the issue and submitted a merge request.
Comment 3 Pan Zhang 2025-09-28 10:11:29 UTC
Git commit 96019a8592788932443fe0d0efc8ea44af2cf948 by Pan Zhang.
Committed on 28/09/2025 at 04:12.
Pushed by meven into branch 'master'.

informationpanelcontent: prevent repeated disabled effect on previews

When switching files quickly in the Information Panel, the preview pixmap could appear progressively brighter/whiter. This happened because markOutdatedPreview() was applying KIconEffect::toDisabled() multiple times on the same pixmap while a preview job was still pending.
This patch fixes the issue by:
- Tracking the URL that was last disabled, and only applying the disabled effect once per URL.
- Clearing the disabled state whenever a new preview job starts or when a new pixmap is shown.

With this change, the "disabled preview" effect is preserved (still useful for slow HDD or network filesystems), but the progressive white-out artifact no longer occurs when navigating rapidly.

M  +14   -2    src/panels/information/informationpanelcontent.cpp
M  +1    -0    src/panels/information/informationpanelcontent.h

https://invent.kde.org/system/dolphin/-/commit/96019a8592788932443fe0d0efc8ea44af2cf948