informationpanelcontent: prevent repeated disabled effect on previews

When switching files quickly in the Information Panel, the preview pixmap could appear progressively brighter/whiter. This happened because markOutdatedPreview() was applying KIconEffect::toDisabled() multiple times on the same pixmap while a preview job was still pending.
This patch fixes the issue by:
- Tracking the URL that was last disabled, and only applying the disabled effect once per URL.
- Clearing the disabled state whenever a new preview job starts or when a new pixmap is shown.

With this change, the "disabled preview" effect is preserved (still useful for slow HDD or network filesystems), but the progressive white-out artifact no longer occurs when navigating rapidly.

BUG: 507844